// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MatrixScreenReaderTable > draws a complete table with row headers and missing data 1`] = `
"<div class="sr-only">
  <table>
    <caption>Spotty data</caption>
    <thead>
      <tr>
        <th></th>
        <th scope="col">1</th>
        <th scope="col">2</th>
        <th scope="col">3</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th scope="row">A</th>
        <td>1A</td>
        <td>2B</td>
        <td></td>
      </tr>
      <tr>
        <th scope="row">B</th>
        <td>1A</td>
        <td>2B</td>
        <td>3C</td>
      </tr>
      <tr>
        <th scope="row">C</th>
        <td></td>
        <td></td>
        <td></td>
      </tr>
      <tr>
        <th scope="row">D</th>
        <td></td>
        <td></td>
        <td></td>
      </tr>
    </tbody>
  </table>
</div>"
`;

exports[`MatrixScreenReaderTable > mounts with row headers 1`] = `
"<div class="sr-only">
  <table>
    <caption>Amount of veggies</caption>
    <thead>
      <tr>
        <th></th>
        <th scope="col">Fruits</th>
        <th scope="col">Grains</th>
        <th scope="col">Leafy Greens</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th scope="row">Week 1</th>
        <td>1</td>
        <td>2</td>
        <td>3</td>
      </tr>
      <tr>
        <th scope="row">Week 2</th>
        <td>1</td>
        <td>1</td>
        <td>2</td>
      </tr>
      <tr>
        <th scope="row">Week 3</th>
        <td>3</td>
        <td>3</td>
        <td>0</td>
      </tr>
    </tbody>
  </table>
</div>"
`;
